--- a/RabbitMessenger/app/src/main/AndroidManifest.xml
+++ b/RabbitMessenger/app/src/main/AndroidManifest.xml
@@ -15,9 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
-
-        </activity>
+        <activity android:name=".ui.MainActivity"></activity>
         <activity
             android:name=".ui.activities.LoginActivity"
             android:label="@string/title_activity_login">
@@ -27,6 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activities.ConversationsActivity"
+            android:label="@string/title_activity_conversations"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
