--- a/RabbitMessenger/app/src/main/AndroidManifest.xml
+++ b/RabbitMessenger/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity"></activity>
+        <activity android:name=".ui.MainActivity" />
         <activity
             android:name=".ui.activities.LoginActivity"
             android:label="@string/title_activity_login">
@@ -26,8 +26,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.ConversationsActivity"
-            android:label="@string/title_activity_conversations"
+            android:name=".ui.activities.ContactsActivity"
+            android:label="@string/title_activity_contacts"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
