--- a/RabbitMessenger/app/src/main/AndroidManifest.xml
+++ b/RabbitMessenger/app/src/main/AndroidManifest.xml
@@ -13,12 +13,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.MainActivity"></activity>
+        android:supportsRtl="true">
         <activity
             android:name=".ui.activities.LoginActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +27,9 @@
         <activity
             android:name=".ui.activities.ContactsActivity"
             android:label="@string/title_activity_contacts"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <service android:name=".tools.service.ContactsService" />
     </application>
 
 </manifest>
