Creating conversation, conversation layout design

--- a/RabbitMessenger/app/src/main/AndroidManifest.xml
+++ b/RabbitMessenger/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".tools.service.ContactsService" />
+        <service android:name=".tools.service.ConversationService"/>
     </application>
 
 </manifest>
