--- a/RabbitMessenger/app/build.gradle
+++ b/RabbitMessenger/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.rabbitmq:amqp-client:5.1.2'
 }
